testdata/baselines/reference/compiler/jsxAttributeValueBinaryExpression.errors.txt
jsxAttributeValueBinaryExpression.tsx(1,2): error TS2304: Cannot find name 'X'.
jsxAttributeValueBinaryExpression.tsx(1,6): error TS100051: JSX element implicitly has type 'any' because no interface 'JsxIntrinsicElements' exists.
jsxAttributeValueBinaryExpression.tsx(1,6): error TS2657: JSX expressions must have one parent element.
jsxAttributeValueBinaryExpression.tsx(1,10): error TS100051: JSX element implicitly has type 'any' because no interface 'JsxIntrinsicElements' exists.


==== jsxAttributeValueBinaryExpression.tsx (4 errors) ====
    <X a=<b/><c/> />
     ~
!!! error TS2304: Cannot find name 'X'.
         ~~~~
!!! error TS100051: JSX element implicitly has type 'any' because no interface 'JsxIntrinsicElements' exists.
         ~~~~~~~~
!!! error TS2657: JSX expressions must have one parent element.
             ~~~~
!!! error TS100051: JSX element implicitly has type 'any' because no interface 'JsxIntrinsicElements' exists.
    